--- a/src/index.css
+++ b/src/index.css
@@ -93,16 +93,22 @@ body {
     height: 32px;
     position: fixed;
     top: 10px;
-    left: 250px;
+    left: 7px;
+    z-index: 2;
+    border: 0;
+    outline: 0;
+    background-color: rgba(0, 0, 0, 0);
+    color: white;
+
 }
 
 #sidebar-button:hover {
-    background-color: #25252b;
+    background-color: rgba(0, 0, 0, 0.123);
     border: 0;
     outline: 0;
 }
 
-.sidebar-task-button {
+.sidebar-div {
     width: 99%;
     display: flex;
     gap: 16px;
@@ -194,6 +200,8 @@ main {
     margin-top: auto;
     margin: auto;
     margin-bottom: auto;
+    transition: all 0.5s;
+
 
 }
 
@@ -204,6 +212,7 @@ table {
     flex-direction: column;
 
     font-size: 24px;
+
 }
 
 thead {
